@@ -146,7 +146,7 @@
 </head>
 <body>
 <h1>Plotscripting Dictionary</h1>
-<h2>For the current OHRRPGCE work-in-progress version (2019-10-06)</h2>
+<h2>For the current OHRRPGCE work-in-progress version (2019-10-12)</h2>
 <p>This is the documentation for all <a href="https://rpg.hamsterrepublic.com/ohrrpgce/Plotscripting">plotscripting</a> commands.
 				In addition to reading this document, we also recommend you check out the
 				<a href="https://rpg.hamsterrepublic.com/ohrrpgce/Plotscripting_Tutorial">Plotscripting Tutorial</a>
@@ -796,6 +796,9 @@
 	
 		<a href="#about-createselect">create select (width, height)</a><br>
 		
+	
+		
+		<a href="#about-loadsprite">create sprite</a><br>
 	
 		<a href="#about-createtext">create text</a><br>
 		
@@ -14026,6 +14029,9 @@ set menu on close script(m, @my menu exit handler)
 		<a href="#about-loadsprite">load sprite (sprite type, num, palette)</a><br>
 		
 	
+		
+		<a href="#about-loadsprite">create sprite</a><br>
+	
 		<a href="#about-replacesprite">replace sprite (slice, sprite type, num, palette)</a><br>
 		
 	
@@ -17285,6 +17291,12 @@ set horiz align(sl, edge:right)
 </div>
 		</p>
 </div>
+		<div class="command">
+<a name="about-createsprite"></a>
+		
+				<h4>create sprite</h4>
+				See <a href="#about-loadsprite">load sprite</a>
+			</div>
 		<div class="command">
 <a name="about-replacesprite"></a>
 		<h4>replace sprite (slice, sprite type, num, palette)</h4>
@@ -23195,7 +23207,7 @@ run key            # Esc or Tab, or Run button on any joystick (Hold to run from
 			</div>
 		<hr>
 		</div>
-<p>Stats: There are 875 commands (of which 50 are aliases), 65 constants and 10 definitions of types and other terms in this file.</p>
+<p>Stats: There are 876 commands (of which 51 are aliases), 65 constants and 10 definitions of types and other terms in this file.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
